--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js"></script>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <title>Food4Thought</title>
+
+    <!--Import Google Icon Font-->
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+
 </head>
 <body>
-    
+
+       <div class="row">
+       <div class="col s12 m7">
+         <div class="card">
+           <div class="card-image">
+               <!-- sample image can go here -->
+             <img src="assets/images/FFTlogo1.png">
+             <span class="card-title"></span>
+           </div>
+           <div class="card-content">
+             <p>Upload your food photo to get a delicious recipe similar to your picture. Millions of recipes are at your fingertips...so what's for dinner? Share and retrieve your food recipes and photos on social media for a chance to win a free $50 amazon gift card. </p>
+           </div>
+           <div class="card-action">
+             <a href="#">Contact Us</a>
+           </div>
+         </div>
+       </div>
+     </div>
+
+
+
+
+
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+   <script type="text/javascript" src="js/materialize.min.js"></script>
+
 </body>
 </html>
