--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
@@ -21,11 +23,19 @@
         <div class="col s12 m7">
         <div id = "Card1">
           <div class="card blue-grey darken-1 white-text">
-            <div class="card-image">
-                <!-- sample image can go here -->
+            <!-- <div class="card-image">
               <img src="assets/upload picture.jpg">
               <span class="card-title">Upload Photo</span>
+            </div> -->
+            <div id="imageDiv" class="card-image" style="width:420px; display:table-cell;">
+                Source image:
+                <br><br>
+                <img id="sourceImage" width="400" />
+                <span class="card-title">Upload Photo</span>
             </div>
+
+
+
             <div class="card-content">
               <p> Picture that you want the recipe for</p>
             </div>
@@ -39,19 +49,28 @@
               <div class="card-panel blue-grey darken-1 white-text">
                     <form action="#">
                             <div class="file-field input-field">
-                              <div class="btn">
-                                <span>Upload URL</span>
-                              </div>
+                              <!-- <div class="btn">
+                                    <span>Upload URL</span>
+                                </div> -->
+                                <button onclick="processImage()" class="button">Upload URL</button>
+                        
                               <div class="file-path-wrapper">
-                                <input class="file-path validate white-text" type="text">
+                                <input class="file-path validate white-text" type="text" id="inputImage"
+                                value="">
                               </div>
                             </div>
                           </form>
               </div>
             </div>
           </div>
+          </div>
+
+
+
+
+<div class="container"></div>          
 <!-- Suggested Picture -->
-          <div class="row">
+          <!-- <div class="row">
                 <div class="col s12 m7">
                 <div id="Card3">
                   <div id="suggested-box" class="card blue-grey darken-1 white-text">
@@ -61,14 +80,14 @@
                     </div>
                     <div class="card-content">
                         <p>Spaghetti</p>
-                    </div>
+                    </div> -->
                     <!-- <div class="card-action"> -->
-                    </div>
+                    <!-- </div>
                   </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Suggested Picture 2 //// card 6 -->
-            <div class="row">
+            <!-- <div class="row">
                     <div class="col s12 m7">
                     <div id="Card6">
                       <div id="suggested-box" class="card blue-grey darken-1 white-text">
@@ -78,14 +97,14 @@
                         </div>
                         <div class="card-content">
                             <p>Spaghetti</p>
-                        </div>
+                        </div> -->
                         <!-- <div class="card-action"> -->
-                        </div>
+                        <!-- </div>
                       </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Suggested Picture 3 ///// card 7 -->
-                <div class="row">
+                <!-- <div class="row">
                         <div class="col s12 m7">
                         <div id="Card7">
                           <div id="suggested-box" class="card blue-grey darken-1 white-text">
@@ -95,12 +114,17 @@
                             </div>
                             <div class="card-content">
                                 <p>Spaghetti</p>
-                            </div>
+                            </div> -->
                             <!-- <div class="card-action"> -->
-                            </div>
+                            <!-- </div>
                           </div>
                         </div>
-                    </div>
+                    </div> -->
+
+
+
+
+
 <!-- Saved Recipe Card -->
             <div class="row">
                     <div class="col s12 m6">
@@ -186,7 +210,11 @@
     </div>
   </a>
   
-   
+    <!-- jQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
    
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
