--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <div class="card-panel blue-grey darken-1 white-text">
                     <form action="#">
                             <div class="file-field input-field">
-
+                              <button onclick="processImage()" class="button btn">Upload URL</button>
                               <div class="file-path-wrapper">
                                 <input class="file-path validate white-text" type="text" id="inputImage"
                                 value="">
@@ -125,61 +125,8 @@
 
 
 
-
-<div class="container"></div>          
 <!-- Suggested Picture -->
-          <!-- <div class="row">
-                <div class="col s12 m7">
-                <div id="Card3">
-                  <div id="suggested-box" class="card blue-grey darken-1 white-text">
-                    <div class="card-image">
-                      <img src="assets/spaghetti.jpg">
-                      <span class="card-title">Suggested Pictures</span>
-                    </div>
-                    <div class="card-content">
-                        <p>Spaghetti</p>
-                    </div> -->
-                    <!-- <div class="card-action"> -->
-                    <!-- </div>
-                  </div>
-                </div>
-            </div> -->
-            <!-- Suggested Picture 2 //// card 6 -->
-            <!-- <div class="row">
-                    <div class="col s12 m7">
-                    <div id="Card6">
-                      <div id="suggested-box" class="card blue-grey darken-1 white-text">
-                        <div class="card-image">
-                          <img src="assets/spaghetti.jpg">
-                          <span class="card-title">Suggested Pictures</span>
-                        </div>
-                        <div class="card-content">
-                            <p>Spaghetti</p>
-                        </div> -->
-                        <!-- <div class="card-action"> -->
-                        <!-- </div>
-                      </div>
-                    </div>
-                </div> -->
-                <!-- Suggested Picture 3 ///// card 7 -->
-                <!-- <div class="row">
-                        <div class="col s12 m7">
-                        <div id="Card7">
-                          <div id="suggested-box" class="card blue-grey darken-1 white-text">
-                            <div class="card-image">
-                              <img src="assets/spaghetti.jpg">
-                              <span class="card-title">Suggested Pictures</span>
-                            </div>
-                            <div class="card-content">
-                                <p>Spaghetti</p>
-                            </div> -->
-                            <!-- <div class="card-action"> -->
-                            <!-- </div>
-                          </div>
-                        </div>
-                    </div> -->
-
-
+<div class="container"></div>          
 
 
 
