--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <!-- NavBar -->
 <nav id="nav">
-    <div class="nav-wrapper #b71c1c">
+    <div class="nav-wrapper black">
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li></li>
         <!-- <li><a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io" target="_blank" rel="noopener" aria-label="">
@@ -133,7 +133,7 @@
 <!-- Upload photo -->
       <div class="row">
             <div class="col s12 m5">
-            <div id="Card2">
+            <div id="Card2" class="card2 black">
               <div class="card-panel blue-grey darken-1 white-text">
                     <form action="#">
                             <div class="file-field input-field">
@@ -177,7 +177,7 @@
                   <!-- RECIPE -->
                   <div class="row">
                         <div class="col s12 m6">
-                        <div id = "Card5">
+                        <div id = "Card5" class ="card5">
                           <div class="card blue-grey darken-1">
                             <div class="card-content white-text">
                               <span class="card-title">Recipes</span>
