--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
   </div>
 
 
-  <!-- Recipes -->
-  <div class="anim">
+  <!-- Recipes carousel -->
+  <div class="anim" id="recipeCarousel">
     <div class="carousel">
       <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
       <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
@@ -99,8 +99,8 @@
   </div>
 
 
-  <!-- Suggested Recipes -->
-  <div class="anim">
+  <!-- Suggested Recipes carousel-->
+  <div class="anim" id="suggestedCarousel">
     <div class="carousel carousel-slider center">
       <div class="carousel-fixed-item center">
         <a class="btn waves-effect white grey-text darken-text-2">button</a>
