--- a/index.html
+++ b/index.html
@@ -49,24 +49,23 @@
 
 
   <!-- Information card -->
-  <div class="row" id="informationCard">
-      <div class="col s12 m6">
-        <div class="card blue-grey darken-1">
-          <div class="card-content white-text">
-            <span class="card-title">Card Title</span>
-            <p>I am a very simple card. I am good at containing small bits of information.
-            I am convenient because I require little markup to use effectively.</p>
-          </div>
-          <div class="card-action">
-            <a href="#">This is a link</a>
-            <a href="#">This is a link</a>
-          </div>
-        </div>
-      </div>
-    </div>
+  <ul class="collapsible" id="informationCard">
+    <li>
+      <div class="collapsible-header"><i class="material-icons">whatshot</i>First</div>
+      <div class="collapsible-body"><span>Look for some delicious food.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">whatshot</i>Second</div>
+      <div class="collapsible-body"><span>Copy the URL, and paste it below.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+      <div class="collapsible-body"><span>We will give you the recipe so you can enjoy your delicious food.</span></div>
+    </li>
+  </ul>
+
 
   <!-- upload card -->
-
   <div class="anim" id="uploadCard">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
@@ -75,13 +74,13 @@
       <div class="card-content">
         <span class="card-title activator grey-text text-darken-4">Upload URL Here:<i
             class="material-icons right"></i></span>
-        <p><a href="#">
-            <input>
-            </input>
-            <button>
-              SUBMIT
-            </button>
-          </a></p>
+        <p>
+          <input>
+          </input>
+          <button class="btn waves-effect black" type="submit" name="action">Submit
+            <i class="material-icons right">send</i>
+          </button>
+        </p>
       </div>
     </div>
   </div>
@@ -99,47 +98,65 @@
   </div>
 
 
-  <!-- Suggested Recipes carousel-->
-  <div class="anim" id="suggestedCarousel">
-    <div class="carousel carousel-slider center">
-      <div class="carousel-fixed-item center">
-        <a class="btn waves-effect white grey-text darken-text-2">button</a>
-      </div>
-      <div class="carousel-item red white-text" href="#one!">
-        <h2>Suggested Recipes</h2>
-        <p class="white-text">Cake</p>
-      </div>
-      <div class="carousel-item amber white-text" href="#two!">
-        <h2>Second Panel</h2>
-        <p class="white-text">This is your second panel</p>
-      </div>
-      <div class="carousel-item green white-text" href="#three!">
-        <h2>Third Panel</h2>
-        <p class="white-text">This is your third panel</p>
-      </div>
-      <div class="carousel-item blue white-text" href="#four!">
-        <h2>Fourth Panel</h2>
-        <p class="white-text">This is your fourth panel</p>
+  <!-- Suggested Recipes -->
+  <div class="anim" id="suggested1">
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/cake.jpg">
+            <span class="card-title">Cake</span>
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+          </div>
+          <div class="card-content">
+            <p>Suggested images</p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-
-  <script type="text/javascript">
-    window.sr = ScrollReveal();
-    sr.reveal('.anim')
-  </script>
-
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
+    </div>
 
 
+    <div class="anim" id="suggested2">
+        <div class="row">
+          <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="assets/images/Pasta.jpeg">
+                <span class="card-title">Pasta</span>
+                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+              </div>
+              <div class="card-content">
+                <p>Suggested images</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script type="text/javascript" src="assets/javascript/main.js"></script>
+
+
+
+
+
+
+    <!-- This is for the scroll effect on the page -->
+    <script type="text/javascript">
+      window.sr = ScrollReveal();
+      sr.reveal('.anim')
+    </script>
+
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript" src="assets/javascript/main.js"></script>
 </body>
 
 </html>
