--- a/index.html
+++ b/index.html
@@ -69,15 +69,16 @@
   <div class="anim" id="uploadCard">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="assets/images/upload url.jpg">
+        <img class="activator" id="sourceImage" src="assets/images/upload url.jpg">
       </div>
       <div class="card-content">
         <span class="card-title activator grey-text text-darken-4">Upload URL Here:<i
             class="material-icons right"></i></span>
         <p>
-          <input>
-          </input>
-          <button class="btn waves-effect black" type="submit" name="action">Submit
+          <input class="file-path validate" type="text" id="inputImage"
+          value="">
+            </input>
+          <button class="btn waves-effect black" type="submit" name="action" onclick="processImage()">Submit
             <i class="material-icons right">send</i>
           </button>
         </p>
@@ -87,8 +88,8 @@
 
 
   <!-- Recipes carousel -->
-  <div class="anim" id="recipeCarousel">
-    <div class="carousel">
+  <div class="anim">
+    <div class="carousel" id="recipeCarousel">
       <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
       <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
       <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
