second carousel javascript functional

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
           <div class="card-image">
             <img src="assets/images/cake.jpg">
             <span class="card-title">Cake</span>
-            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+            <a class="btn-floating halfway-fab waves-effect waves-light red suggestedSubmit" data-image="https://cdn-image.foodandwine.com/sites/default/files/1532533774/moms-chocolate-cake-XL-RECIPE0918.jpg">
+              <i class="material-icons">add</i></a>
           </div>
           <div class="card-content">
             <p>Suggested images</p>
@@ -125,7 +126,8 @@
               <div class="card-image">
                 <img src="assets/images/Pasta.jpeg">
                 <span class="card-title">Pasta</span>
-                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+                <a class="btn-floating halfway-fab waves-effect waves-light red suggestedSubmit" data-image="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2016/12/17/4/FNM010117_One-Pot-Spaghetti-with-Sausage-Recipe_s4x3.jpg.rend.hgtvcom.826.620.suffix/1482181364916.jpeg">
+                  <i class="material-icons">add</i></a>
               </div>
               <div class="card-content">
                 <p>Suggested images</p>
