updated the upload image card, and moved the recipes. The suggested cards are also moved together.

--- a/index.html
+++ b/index.html
@@ -136,9 +136,8 @@
 
 
 
-
-
-
+            <!-- footer -->
+            
 
     <!-- This is for the scroll effect on the page -->
     <script type="text/javascript">
