fixed the card buttons, added color, and changed api key

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <!-- upload button -->
   <div class="row">
-      <div class="card col s6">
+      <div class="card col s6" id="outerUploadCard">
           <div class="anim" id="uploadCard">
               <div class="card-image waves-effect waves-block waves-light">
                   <img class="activator" id="sourceImage" src="assets/images/upload url.jpg">
